test/grammar/schema/inherit/multi_inherit_fail_0/stderr.golden
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:9:22
  |
9 | schema Scholar(Person, Knowledge):
  |                      ^ expected one of [")"] got ,
  |
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:9:24
  |
9 | schema Scholar(Person, Knowledge):
  |                        ^ expected one of [":"] got identifier
  |
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:9:33
  |
9 | schema Scholar(Person, Knowledge):
  |                                 ^ unexpected token ')'
  |
error[E1001]: InvalidSyntax
 --> ${CWD}/main.k:9:34
  |
9 | schema Scholar(Person, Knowledge):
  |                                  ^ unexpected token ':'
  |
error[E1001]: InvalidSyntax
  --> ${CWD}/main.k:10:5
   |
10 |     school: str
   |     ^ unexpected token 'indent'
   |
error[E1001]: InvalidSyntax
  --> ${CWD}/main.k:12:1
   |
12 | JonSnow = Person {
   |  expected one of ["="] got dedent
   |
error[E1001]: InvalidSyntax
  --> ${CWD}/main.k:12:1
   |
12 | JonSnow = Person {
   |  unexpected token 'dedent'
   |
error[E2L23]: CompileError
  --> ${CWD}/main.k:20:5
   |
20 |     "subject": "CS",
   |     ^ Cannot add member 'subject' to schema 'Scholar'
   |
error[E2L23]: CompileError
  --> ${CWD}/main.k:21:5
   |
21 |     "school": "PKU"
   |     ^ Cannot add member 'school' to schema 'Scholar'
   |